[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/enemy-sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/flash_shader.gdshader" type="Shader" id=3]
[ext_resource path="res://Assets/SFX/enemyhurt.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/eneymshoot.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/enemy death.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/underhealth.png" type="Texture" id=7]
[ext_resource path="res://Assets/fill health.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "shoot"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Enemy" type="KinematicBody2D" groups=["enemy_group"]]
z_index = 2
collision_layer = 16
collision_mask = 22
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.55, 0.55 )
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 4 )

[node name="reload" type="Timer" parent="."]

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -11.361

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -9.613

[node name="shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -7.866

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -3.75, 0.75 )
scale = Vector2( 0.475, 0.725 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/shoot = SubResource( 9 )

[node name="timer2" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = -24.0
margin_right = 11.0
margin_bottom = -16.0
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="timer2" to="." method="_on_timer2_timeout"]
